# stapi-fastapi

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  DOCKER.md  Dockerfile  LICENSE  README.md  RELEASE.md  compose.yml  conftest.py  justfile  lambda_handler.py  noxfile.py  pyproject.toml
.github/: pull_request_template.md
.github/actions/bump/: action.yml
.github/actions/cdk-deploy/: action.yml
.github/actions/pre-commit/: action.yml
.github/workflows/: deploy.yml  pr.yml  python-publish.yml  release.yml  tag-n-release.yml
adrs/: README.md  constraints.md
deploy_cdk/: app.py  cdk.json  profile.py
deployment/: Dockerfile  app.py  cdk_deployment.py  handler.py  profile.py  random_script.py
scripts/: bootstrap  server  test
src/stapi_fastapi/: __init__.py  backend.py  constants.py  exceptions.py  main_router.py  products_router.py  responses.py
src/stapi_fastapi/backends/: __init__.py  product_backend.py  root_backend.py
src/stapi_fastapi/models/: __init__.py  conformance.py  opportunity.py  order.py  product.py  root.py  shared.py
src/stapi_fastapi/routers/: __init__.py  product_router.py  root_router.py  route_names.py
src/stapi_fastapi/types/: datetime_interval.py  filter.py  json_schema_model.py
stapi_fastapi/: __dev__.py  api.py  backend.py  exceptions.py  main_router.py  products_router.py  umbra_spotlight_router.py
stapi_fastapi/generic/: router.py  router_test.py
stapi_fastapi/generic/models/: product.py
stapi_fastapi/models/: constraints.py  opportunity.py  product.py  root.py
stapi_fastapi/types/: datetime_interval.py  filter.py  json_schema_model.py
stapi_fastapi_landsat/: README.md  __dev__.py  __init__.py  backend.py  models.py
stapi_fastapi_landsat/files/: README.md
stapi_fastapi_test_backend/: __init__.py  backend.py
stapi_fastapi_tle_backend/: __init__.py  backend.py  models.py  order_test.py  repository.py
stat_fastapi/: __dev__.py  api.py  backend.py  constants.py  exceptions.py  lambda_handler.py
stat_fastapi/models/: constraints.py  opportunity.py  order.py  product.py  root.py  shared.py
stat_fastapi/types/: datetime_interval.py  datetime_interval_test.py  filter.py
stat_fastapi_landsat/: __dev__.py  __init__.py  backend.py  models.py  repository.py  settings.py
stat_fastapi_landsat/files/: satellites.json
stat_fastapi_mock_backend/: __init__.py  backend.py  models.py  order_test.py  repository.py  settings.py
stat_fastapi_test_backend/: __init__.py  backend.py
stat_fastapi_tle_backend/: __init__.py  backend.py  models.py  order_test.py  repository.py  satellite.py  settings.py
stat_fastapi_umbra/: __dev__.py  __init__.py  backend.py  products.py
stat_fastapi_umbra_backend/: __init__.py  backend.py  products.py  settings.py
tests/: application.py  backends.py  conformance_test.py  conftest.py  datetime_interval_test.py  opportunity_test.py  order_test.py  product_test.py  root_test.py  shared.py  test_datetime_interval.py  test_opportunity.py  test_opportunity_async.py  test_order.py  test_product.py  test_root.py  utils.py  warnings.py
tests/backend/: __init__.py  backend.py
