[tool.poetry]
name = "stat-fastapi"
version = "0.0.0"
description = "Spatio Temporal Asset Tasking with FastAPI"
authors = ["Christian Wygoda <christian.wygoda@wygoda.net>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
fastapi = "^0.110.0"
pydantic = "^2.6.4"
geojson-pydantic = "^1.0.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
ruff = "^0.3.4"
uvicorn = "^0.29.0"
pydantic-settings = "^2.2.1"
httpx = "^0.27.0"
pytest-coverage = "^0.0"
pyrfc3339 = "^1.1"
skyfield = "^1.48"
sqlalchemy = "^2.0.29"
geoalchemy2 = "^0.14.6"
shapely = "^2.0.3"
pre-commit = "^3.7.0"

[tool.poetry.group.lambda.dependencies]
mangum = "^0.17.0"

[tool.poetry.scripts]
dev = "stat_fastapi.__dev__:cli"
umbra = "stat_fastapi_umbra.__dev__:cli"


[tool.ruff]
line-length = 88

[tool.ruff.lint]
extend-ignore = ["E501", "UP007", "UP034", "E701"]
select = ["C9", "E", "F", "I", "W", "UP"]
[tool.ruff.lint.isort]
[tool.ruff.lint.mccabe]
max-complexity = 8

[tool.coverage.report]
show_missing = true
skip_empty = true
sort = "Cover"
omit = ["**/*_test.py", "**/conftest.py", "stat_fastapi/__dev__.py"]

[tool.pytest.ini_options]
addopts = "--cov=stat_fastapi"
filterwarnings = [
    "ignore:The 'app' shortcut is now deprecated.:DeprecationWarning",
    "ignore:Pydantic serializer warnings:UserWarning",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
