[tool.poetry]
name = "stapi-fastapi"
# placeholder version filled by poetry-dynamic-versioning
version = "0.0.0"
description = "Spatio Temporal Asset Tasking with FastAPI"
authors = ["Christian Wygoda <christian.wygoda@wygoda.net>"]
license = "MIT"
readme = "README.md"
packages = [{include = "stapi_fastapi", from="src"}]

[tool.poetry.dependencies]
python = "3.12.*"
fastapi = "^0.115.0"
pydantic = "^2.9.2"
geojson-pydantic = "^1.1.1"
pygeofilter = "^0.2.4"
returns = "^0.23.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
ruff = "^0.7.4"
uvicorn = "^0.29.0"
pydantic-settings = "^2.2.1"
httpx = "^0.27.0"
pytest-coverage = "^0.0"
pyrfc3339 = "^1.1"
pre-commit = "^3.7.0"
nox = "^2024.4.15"

[tool.poetry.scripts]
dev = "stapi_fastapi.__dev__:cli"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
extend-ignore = ["E501", "UP007", "UP034"]
select = [
    "C9",
    "E",
    "F",
    "I",
    "W",
    "UP"
]

[tool.ruff.lint.mccabe]
max-complexity = 8

[tool.coverage.report]
show_missing = true
skip_empty = true
sort = "Cover"
omit = [
    "**/*_test.py",
    "**/conftest.py",
    "stapi_fastapi/__dev__.py",
]

[tool.pytest.ini_options]
addopts="--cov=stapi_fastapi"
filterwarnings = [
    "ignore:The 'app' shortcut is now deprecated.:DeprecationWarning",
    "ignore:Pydantic serializer warnings:UserWarning",
]

[build-system]
requires = [
    "poetry-core>=1.0.0",
    "poetry-dynamic-versioning>=1.0.0,<2.0.0",]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry-dynamic-versioning]
enable = true
